# AmigaACEPlay

./: .gitignore  CMakeLists.txt  README.md  amiga4ever pro.ttf:Zone.Identifier  main.c  myacefont.fnt  mytopazacefont.fnt
src/: AmigaACEPlay.code-workspace  game.c  game.h  menu.c  menu.h  myacefont.fnt
